--- a/Labboratorio10/app/src/main/res/values/strings.xml
+++ b/Labboratorio10/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Labboratorio10</string>
+    <string name="prefs_file">com.example.labboratorio10.PREFERENCE_FILE_KEY</string>
+    <string name="default_web_client_id">523060526681-cdo41iitt2c7idm16e00c4h7d6kk4dpp.apps.googleusercontent.com</string>
 </resources>
